# alfred-thesaurus

./: .gitignore  Cargo.toml  README.md  build-workflow.sh  info.plist
src/: main.rs
