[package]
name = "alfred-thesaurus"
version = "0.1.0"
edition = "2021"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Workflow for finding synonyms and antonyms of words"

# These URLs point to more information about the repository. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
documentation = "https://docs.rs/alfred-thesaurus"
homepage = "https://github.com/omerdn1/alfred-thesaurus"
repository = "https://github.com/omerdn1/alfred-thesaurus"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["thesaurus", "synonyms", "antonyms", "alfred", "mac"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT"


[dependencies]
alfred = "4.0.2"
clap = "3.2.17"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0.144", features = ["derive"] }
